--- a/docs/src/02.getting-started.md
+++ b/docs/src/02.getting-started.md
@@ -33,4 +33,4 @@ builder.AddBlazorAuth();
 
 ### Usage
 
-Use Blazor [authentication capabilities](](https://learn.microsoft.com/en-us/aspnet/core/blazor/security)) (such as `@attribute [Authorize]`, `AuthorizeView`, `AuthorizeRouteView`) as you normally would.
+Use Blazor [authentication capabilities](https://learn.microsoft.com/en-us/aspnet/core/blazor/security) (such as `@attribute [Authorize]`, `AuthorizeView`, `AuthorizeRouteView`) as you normally would.
