--- a/docs/src/03.authentication.md
+++ b/docs/src/03.authentication.md
@@ -9,6 +9,9 @@ In order to implement User authentication with this library, you need to impleme
 
 1. Create a class for your Sign-In payload. This class will be used to pass the user's credentials to the `IAuthenticationService` implementation.
 
+> ℹ️
+> This class needs to be serializable, so it can be passed between the Client and Server projects over http.
+
 #### Example SignInPayload:
 
 ```csharp
@@ -19,7 +22,10 @@ public class SignInPayload
 }
 ```
 
-2. Create a class for your Sign-Up payload. This class will be used to pass the user's credentials to the `IAuthenticationService` implementation.
+1. Create a class for your Sign-Up payload. This class will be used to pass the user's credentials to the `IAuthenticationService` implementation.
+
+> ℹ️
+> This class needs to be serializable, so it can be passed between the Client and Server projects over http.
 
 #### Example SignUpPayload:
 
@@ -31,7 +37,10 @@ public class SignUpPayload
 }
 ```
 
-3. You can inherit from the base `ServerSideAuthenticationService` class in order to implement the `IAuthenticationService` in your Blazor Server project.
+> ℹ️
+> You don't need to add this class if you only want to implement the Sign-In functionality don't want to implement the Sign-Up functionality.
+
+1. You can inherit from the base `ServerSideAuthenticationService` class in order to simplify the implementation of the `IAuthenticationService` in your Blazor Server project.
 
 #### Example IAuthenticationService implementation:
 
@@ -85,7 +94,7 @@ public class SampleServerSideAuthenticationService
 builder.AddBlazorAuth<SampleServerSideAuthenticationService>();
 ```
 
-5. You can now use the `IUserService` in your Blazor Pages to Sign-In, Sign-Up, and Refresh the JWT Pair. The `IUserService` will call your `IAuthenticationService` implementation to perform these actions and update the User's state.
+1. You can now use the `IUserService` in your Blazor Pages to Sign-In, Sign-Up, and Refresh the JWT Pair. The `IUserService` will call your `IAuthenticationService` implementation to perform these actions. Upon receiving a response, the `IUserService` will then update the User's state. You can see more about how the services interact with each other in the [architecture](04.architecture.md) section.
 
 > ℹ️
-> You can also inject and use the `IAuthenticationService` directly in your Blazor application, it will process the Sign-In, Sign-Up, and Refresh Token requests without updating the User's state.
+> You can also inject and use the `IAuthenticationService` directly in your Blazor application, it will process the Sign-In, Sign-Up, and Refresh Token requests without updating the User's state. You can inject the `IAuthenticationService` in the wasm part of your app. It will call the Server's WebAPI to perform the authentication action and return the same response as if the action was performed on the server. Keep in mind that in this case a serialization/deserialization process will take place in order to pass the data between the Client and Server projects.
