Improve docs on usage

--- a/docs/src/02.getting-started.md
+++ b/docs/src/02.getting-started.md
@@ -2,13 +2,13 @@
 
 ### Installation
 
-Install the following client package in your Blazor Server project:
+Add this nuget package to your **Server** project:
 
 ```
 dotnet add package BitzArt.Blazor.Auth.Server --prerelease
 ```
 
-Install the following client package in your Blazor Client project:
+Add this nuget package to your **Client** project:
 
 ```
 dotnet add package BitzArt.Blazor.Auth.Client --prerelease
@@ -19,13 +19,7 @@ dotnet add package BitzArt.Blazor.Auth.Client --prerelease
 
 ### Configuration
 
-Call this method in your Server `Program.cs`:
-
-```csharp
-builder.AddBlazorAuth();
-```
-
-Call this method in your Client `Program.cs`:
+Call this method in both your **Server** `Program.cs` and **Client** `Program.cs`:
 
 ```csharp
 builder.AddBlazorAuth();
@@ -33,4 +27,8 @@ builder.AddBlazorAuth();
 
 ### Usage
 
-Use Blazor [authorization capabilities](https://learn.microsoft.com/en-us/aspnet/core/blazor/security) (such as `@attribute [Authorize]`, `AuthorizeView`, `AuthorizeRouteView`) as you normally would.
+You can now use Blazor [authorization capabilities](https://learn.microsoft.com/en-us/aspnet/core/blazor/security) (such as `@attribute [Authorize]`, `AuthorizeView`, `AuthorizeRouteView`) as you normally would.
+
+### What's next?
+
+Refer to the [Authentication](03.authentication.md) section to learn how to customize your authentication logic.
