--- a/docs/src/03.authentication.md
+++ b/docs/src/03.authentication.md
@@ -7,14 +7,15 @@ In order to implement User authentication with this library, you need to impleme
 
 ### Implementation
 
-1. Create a class for your Sign-In payload. This class will be used to pass the user's credentials to the `IAuthenticationService` implementation.
+#### Sign-In Payload
+
+Create a class for your Sign-In payload. This class will be used to pass the user's credentials to the `IAuthenticationService` implementation.
 
 > ℹ️
 > This class needs to be serializable, so it can be passed between the Client and Server projects over http.
 
-#### Example SignInPayload:
-
 ```csharp
+// Example Sign-In payload
 public class SignInPayload
 {
     public string Email { get; set; }
@@ -22,14 +23,17 @@ public class SignInPayload
 }
 ```
 
-1. Create a class for your Sign-Up payload. This class will be used to pass the user's credentials to the `IAuthenticationService` implementation.
+#### Sign-Up Payload
+
+You don't need to do this if you don't want to implement the Sign-Up functionality.
+
+Create a class for your Sign-Up payload. This class will be used to pass the user's credentials to the `IAuthenticationService` implementation.
 
 > ℹ️
 > This class needs to be serializable, so it can be passed between the Client and Server projects over http.
 
-#### Example SignUpPayload:
-
 ```csharp
+// Example Sign-Up payload
 public class SignUpPayload
 {
     public string Email { get; set; }
@@ -37,14 +41,12 @@ public class SignUpPayload
 }
 ```
 
-> ℹ️
-> You don't need to add this class if you only want to implement the Sign-In functionality don't want to implement the Sign-Up functionality.
+#### Authentication Service
 
-1. You can inherit from the base `ServerSideAuthenticationService` class in order to simplify the implementation of the `IAuthenticationService` in your Blazor Server project.
-
-#### Example IAuthenticationService implementation:
+You can inherit from the base `ServerSideAuthenticationService` class in order to simplify the implementation of the `IAuthenticationService` in your Blazor Server project.
 
 ```csharp
+// Example Authentication Service
 public class SampleServerSideAuthenticationService
     : ServerSideAuthenticationService<SignInPayload, SignUpPayload>()
 {
@@ -86,15 +88,18 @@ public class SampleServerSideAuthenticationService
 }
 ```
 
-4. Call the `AddBlazorAuth` method in your Blazor Server `Program.cs` file and specify your `IAuthenticationService` implementation.
+#### Register the Authentication Service
 
-#### Example Program.cs implementation:
+Call the `AddBlazorAuth` method in your Blazor Server `Program.cs` file and specify your `IAuthenticationService` implementation.
 
 ```csharp
+// Program.cs
 builder.AddBlazorAuth<SampleServerSideAuthenticationService>();
 ```
 
-1. You can now use the `IUserService` in your Blazor Pages to Sign-In, Sign-Up, and Refresh the JWT Pair. The `IUserService` will call your `IAuthenticationService` implementation to perform these actions. Upon receiving a response, the `IUserService` will then update the User's state. You can see more about how the services interact with each other in the [architecture](04.architecture.md) section.
+#### User Service
+
+You can now use the `IUserService` in your Blazor Pages to Sign-In, Sign-Up, and Refresh the JWT Pair. The `IUserService` will call your `IAuthenticationService` implementation to perform these actions. Upon receiving a response, the `IUserService` will then update the User's state. You can see more about how the services interact with each other in the [architecture](04.architecture.md) section.
 
 > ℹ️
 > You can also inject and use the `IAuthenticationService` directly in your Blazor application, it will process the Sign-In, Sign-Up, and Refresh Token requests without updating the User's state. You can inject the `IAuthenticationService` in the wasm part of your app. It will call the Server's WebAPI to perform the authentication action and return the same response as if the action was performed on the server. Keep in mind that in this case a serialization/deserialization process will take place in order to pass the data between the Client and Server projects.
