Minor documentation updates

--- a/docs/src/01.introduction.md
+++ b/docs/src/01.introduction.md
@@ -1,6 +1,6 @@
 ## Introduction
 
-BitzArt.Blazor.Auth is a Blazor library that provides authentication and authtorization capabilities for Blazor applications. Thanks to [Blazor.Cookies package](https://github.com/BitzArt/Blazor.Cookies), it works with all Blazor United  **render modes**:
+BitzArt.Blazor.Auth is a Blazor library that provides tearless **authentication** and **authorization** capabilities for Blazor applications. Thanks to [Blazor.Cookies package](https://github.com/BitzArt/Blazor.Cookies), it works with all Blazor United  **render modes**:
 
 | Blazor Rendermode       | Support |
 |-------------------------|:-------:|
@@ -8,5 +8,7 @@ BitzArt.Blazor.Auth is a Blazor library that provides authentication and authtor
 | Interactive Server      | ✔️     |
 | Interactive WebAssembly | ✔️     |
 | Interactive Auto        | ✔️     |
+
+### Getting Started
 
 Refer to the [Getting Started](02.getting-started.md) section to learn how to use this library in your Blazor applications.
