--- a/docs/src/01.introduction.md
+++ b/docs/src/01.introduction.md
@@ -1,6 +1,6 @@
 ## Introduction
 
-BitzArt.Blazor.Auth is a Blazor library that provides tearless **authentication** and **authorization** capabilities for Blazor applications. Thanks to [Blazor.Cookies package](https://github.com/BitzArt/Blazor.Cookies), it works with all Blazor United  **render modes**:
+BitzArt.Blazor.Auth is a Blazor library that provides tearless **authentication** and **authorization** capabilities for Blazor applications. Thanks to [Blazor.Cookies](https://github.com/BitzArt/Blazor.Cookies), it works with all Blazor United  **render modes**:
 
 | Blazor Rendermode       | Support |
 |-------------------------|:-------:|
