Remove prerelease warnings

--- a/docs/src/02.getting-started.md
+++ b/docs/src/02.getting-started.md
@@ -5,17 +5,14 @@
 Add this nuget package to your **Server** project:
 
 ```
-dotnet add package BitzArt.Blazor.Auth.Server --prerelease
+dotnet add package BitzArt.Blazor.Auth.Server
 ```
 
 Add this nuget package to your **Client** project:
 
 ```
-dotnet add package BitzArt.Blazor.Auth.Client --prerelease
+dotnet add package BitzArt.Blazor.Auth.Client
 ```
-
-> ℹ️
-> The packages are currently in prerelease state.
 
 ### Configuration
 
