Add MapAuthEndpoints to implementation guide

--- a/docs/src/03.authentication.md
+++ b/docs/src/03.authentication.md
@@ -97,6 +97,13 @@ Call the `AddBlazorAuth` method in your Blazor Server `Program.cs` file and spec
 builder.AddBlazorAuth<SampleServerSideAuthenticationService>();
 ```
 
+Add the authentication endpoints in your Blazor Server `Program.cs`. This is required in order to allow the Client project to call the Server's API and use the server-side `IAuthenticationService` implementation.
+
+```csharp
+// Program.cs
+app.MapAuthEndpoints();
+```
+
 #### User Service
 
 You can now use the `IUserService` in your Blazor Pages to Sign-In, Sign-Up, and Refresh the JWT Pair. The `IUserService` will call your `IAuthenticationService` implementation to perform these actions. Upon receiving a response, the `IUserService` will then update the User's state. You can see more about how the services interact with each other in the [architecture](04.architecture.md) section.
