Add token duration and sign-out sections

--- a/docs/src/03.authentication.md
+++ b/docs/src/03.authentication.md
@@ -1,5 +1,8 @@
 ## Authentication
 
+> 💡
+> You can always refer to the [sample project](https://github.com/BitzArt/Blazor.Auth/tree/main/sample/SampleBlazorApp) for additional guidance.
+
 In order to implement User authentication with this library, you need to implement the `IAuthenticationService` in your Blazor Server project and specify it when calling the `AddBlazorAuth` method in your Blazor Server `Program.cs` file.
 
 > ℹ️
@@ -11,7 +14,7 @@ In order to implement User authentication with this library, you need to impleme
 
 Create a class for your Sign-In payload. This class will be used to pass the user's credentials to the `IAuthenticationService` implementation.
 
-> ℹ️
+> 📜
 > This class needs to be serializable, so it can be passed between the Client and Server projects over http.
 
 ```csharp
@@ -29,7 +32,7 @@ You don't need to do this if you don't want to implement the Sign-Up functionali
 
 Create a class for your Sign-Up payload. This class will be used to pass the user's credentials to the `IAuthenticationService` implementation.
 
-> ℹ️
+> 📜
 > This class needs to be serializable, so it can be passed between the Client and Server projects over http.
 
 ```csharp
@@ -110,3 +113,30 @@ You can now use the `IUserService` in your Blazor Pages to Sign-In, Sign-Up, and
 
 > ℹ️
 > You can also inject and use the `IAuthenticationService` directly in your Blazor application, it will process the Sign-In, Sign-Up, and Refresh Token requests without updating the User's state. You can inject the `IAuthenticationService` in the wasm part of your app. It will call the Server's WebAPI to perform the authentication action and return the same response as if the action was performed on the server. Keep in mind that in this case a serialization/deserialization process will take place in order to pass the data between the Client and Server projects.
+
+#### Token duration
+
+You can specify the duration of your access token and refresh token whenever you are providing your `JwtPair` to Blazor.Auth. The duration of the access token should be short, while the refresh token should normally be long-lived. 
+
+```csharp
+return new JwtPair
+    {
+        AccessToken = "my-access-token"
+        RefreshToken = "my-refresh-token"
+        AccessTokenExpiresAt = DateTimeOffset.UtcNow.AddMinutes(15),
+        RefreshTokenExpiresAt = DateTimeOffset.UtcNow.AddDays(7)
+    }
+```
+
+> ⚠️
+> Not providing an expiration date for the access token will result in the tokens being session-scoped. This means that the tokens will expire when the browser tab closes.
+
+#### Sign out
+
+You can sign the user out by calling the `SignOutAsync` method of the `IUserService`. This will clear the user's JwtPair.
+
+```csharp
+await UserService.SignOutAsync();
+NavigationManager.NavigateTo("/", true);
+```
+
