--- a/docs/src/03.authentication.md
+++ b/docs/src/03.authentication.md
@@ -116,7 +116,7 @@ You can now use the `IUserService` in your Blazor Pages to Sign-In, Sign-Up, and
 
 #### Token duration
 
-You can specify the duration of your access token and refresh token whenever you are providing your `JwtPair` to Blazor.Auth. The duration of the access token should be short, while the refresh token should normally be long-lived. 
+You can specify the duration of your access token and refresh token whenever you are providing your `JwtPair` to Blazor.Auth. The duration of the access token should normally be short, while the refresh token should normally be long-lived.
 
 ```csharp
 return new JwtPair
@@ -129,7 +129,7 @@ return new JwtPair
 ```
 
 > ⚠️
-> Not providing an expiration date for the access token will result in the tokens being session-scoped. This means that the tokens will expire when the browser tab closes.
+> Not providing an expiration date for the tokens will result in them being session-scoped. This means that the tokens will expire when the browser tab closes.
 
 #### Sign out
 
