Update Architecture section in docs

--- a/docs/src/05.architecture.md
+++ b/docs/src/05.architecture.md
@@ -4,16 +4,40 @@ The package works by setting and reading Cookies in User's Browser. The Cookies 
 
 ## AuthenticationStateProvider implementations
 
+### InteractiveWebAssembly
+
+```mermaid
+sequenceDiagram
+
+participant client as Blazor Client
+participant provider as InteractiveWasmAuthenticationStateProvider
+participant server as Blazor Server
+
+client ->>+ provider: GetAuthenticationStateAsync
+
+provider ->>+ server: Http request: /auth-state
+
+server ->> server: if AccessToken expired: Refresh JwtPair
+
+server ->> server: Retrieve Claims from cookies
+
+server -->>- provider: Claims
+note over server,provider: Http response updates browser cookies
+
+provider ->> provider: Creates AuthenticationState <br/> from provided claims
+
+provider -->>- client: AuthenticationState
+```
+
 ### InteractiveServer
 
 ```mermaid 
 sequenceDiagram
 
-participant client as Client
+participant client as Blazor Client
 participant server as Blazor Server
 participant provider as InteractiveServerAuthenticationStateProvider
 
-client ->>+ server: Render page (interactive)
 server ->>+ provider: GetAuthenticationStateAsync
 provider ->> provider: Generate unique request identifier
 provider ->>+ server: Subscribe
@@ -37,5 +61,4 @@ server -->>- client: OK
 provider ->> provider: Generate AuthenticationState
 provider -->>- server: AuthenticationState
 server ->> server: Render page
-server -->>- client: Page
 ```
