Restructure use-cases

--- a/docs/src/04.use-cases.md
+++ b/docs/src/04.use-cases.md
@@ -2,4 +2,4 @@
 
 Depending on your current render mode, Blazor.Auth will behave differently. In-depth use case diagrams are organized according to different Blazor interactivity types:
 
-- [Interactive WebAssembly](04.1.interactive-webassembly.md)
+- [Interactive WebAssembly](04.use-cases/01.interactive-webassembly.md)
