--- a/docs/src/04.use-cases/01.interactive-webassembly.md
+++ b/docs/src/04.use-cases/01.interactive-webassembly.md
@@ -1,3 +1,5 @@
+Back to [Use Cases](../04.use-cases.md)
+
 ## Interactive WebAssembly
 
 The following sequence diagrams illustrate the use cases for Blazor.Auth in a Blazor application that is currently using interactive WebAssembly render mode:
