Update use-cases for interactive webassembly

--- a/docs/src/04.use-cases.md
+++ b/docs/src/04.use-cases.md
@@ -3,3 +3,10 @@
 Depending on your current render mode, Blazor.Auth will behave differently. In-depth use case diagrams are organized according to different Blazor interactivity types:
 
 - [Interactive WebAssembly](04.use-cases/01.interactive-webassembly.md)
+- ⚠️ [Interactive Server (Work in progress)](04.use-cases/02.interactive-server.md) ⚠️ 
+
+### Refresh Token
+
+On every `GetAuthenticationStateAsync` call to `AuthenticationStateProvider`, it will check if the current access token is expired. If it is, the user's JWT Pair will automatically be refreshed.
+
+For a more in-depth overview of this process, refer to the [Architecture](05.architecture.md) section.
