--- a/docs/src/04.use-cases/01.interactive-webassembly.md
+++ b/docs/src/04.use-cases/01.interactive-webassembly.md
@@ -11,18 +11,27 @@ sequenceDiagram
 
 actor user as User
 participant page as SignIn Page
-participant userService as IUserService
-participant authService as IAuthenticationService
+participant userServiceClient as IUserService (Client)
+participant userServiceServer as IUserService (Server)
+participant authService as IAuthenticationService (Server)
 
 user ->>+ page: Submit Sign-In Form
-page ->>+ userService: SignInAsync(signInPayload)
-userService ->>+ authService: SignInAsync(signInPayload)
-authService ->> authService: Your sign-in logic
-authService -->>- userService: AuthenticationResult
-userService ->> userService: Update Browser Cookies
-userService -->>- page: AuthenticationResult
+page ->>+ userServiceClient: SignInAsync(signInPayload)
+note over page,userServiceClient: Resolve IUserService from DI<br/> and call it's `SignInAsync` method.
+userServiceClient ->>+ userServiceServer: SignInAsync(signInPayload)
+note over userServiceClient,userServiceServer: Client-side implementation <br/> will make an HTTP request to the server, <br/> no manual action is required.
+
+userServiceServer ->>+ authService: SignInAsync(signInPayload)
+authService ->> authService: Your server-side sign-in logic
+
+authService -->>- userServiceServer: AuthenticationResult
+userServiceServer ->> userServiceClient: AuthenticationResult
+note over userServiceServer,userServiceClient: Server-side implementation will <br/> return AuthenticationResult to the client, <br/> updated cookies will be attached <br/> to the HTTP response <br/> and automalically stored <br/> in the user's browser.
+
+userServiceClient -->>- page: AuthenticationResult
 page -->>- user: Redirect to home page
-note over user,userService: Upon receiving AuthenticationResult from IUserService, <br/> do a page refresh in order to refresh the User's AuthenticationState<br/><br/> Example: NavigationManager.NavigateTo("/", true)
+
+note over user,userServiceClient: Upon receiving AuthenticationResult from IUserService, <br/> do a page refresh in order to refresh the User's AuthenticationState<br/><br/> Example: NavigationManager.NavigateTo("/", true).
 ```
 
 ### Sign-Up
@@ -31,40 +40,26 @@ note over user,userService: Upon receiving AuthenticationResult from IUserServic
 sequenceDiagram
 
 actor user as User
-participant page as SignIn Page
-participant userService as IUserService
-participant authService as IAuthenticationService
+participant page as SignUp Page
+participant userServiceClient as IUserService (Client)
+participant userServiceServer as IUserService (Server)
+participant authService as IAuthenticationService (Server)
 
 user ->>+ page: Submit Sign-Up Form
-page ->>+ userService: SignUpAsync(signUpPayload)
-userService ->>+ authService: SignUpAsync(signUpPayload)
-authService ->> authService: Your sign-up logic
-authService -->>- userService: AuthenticationResult
-userService ->> userService: Update Browser Cookies
-userService -->>- page: AuthenticationResult
-page -->- user: Redirect to home page
-note over user,userService: Upon receiving AuthenticationResult from IUserService, <br/> do a page refresh in order to refresh the User's AuthenticationState<br/><br/> Example: NavigationManager.NavigateTo("/", true)
-```
+page ->>+ userServiceClient: SignUpAsync(signUpPayload)
+note over page,userServiceClient: Resolve IUserService from DI<br/> and call it's `SignUpAsync` method.
+userServiceClient ->>+ userServiceServer: SignUpAsync(signUpPayload)
+note over userServiceClient,userServiceServer: Client-side implementation <br/> will make an HTTP request to the server, <br/> no manual action is required.
 
-### Refresh Token
+userServiceServer ->>+ authService: SignUpAsync(signUpPayload)
+authService ->> authService: Your server-side sign-up logic
 
-```mermaid
-sequenceDiagram
+authService -->>- userServiceServer: AuthenticationResult
+userServiceServer ->> userServiceClient: AuthenticationResult
+note over userServiceServer,userServiceClient: Server-side implementation will <br/> return AuthenticationResult to the client, <br/> updated cookies will be attached <br/> to the HTTP response <br/> and automalically stored <br/> in the user's browser.
 
-actor user as User
-participant page as Page
-participant lib as Blazor.Auth
-participant userService as IUserService
-participant authService as IAuthenticationService
+userServiceClient -->>- page: AuthenticationResult
+page -->>- user: Redirect to home page
 
-user ->>+ page: Open Page
-page ->>+ lib: Get User's AuthenticationState
-lib ->>+ userService: If AccessToken expired,\nRefreshJwtPairAsync
-userService ->>+ authService: RefreshJwtPairAsync
-authService ->> authService: Your refresh logic
-authService -->>- userService: AuthenticationResult
-userService ->> userService: Update Browser Cookies
-userService -->>- lib: AuthenticationResult
-lib -->>- page: AuthenticationState
-page -->>- user: Display Page
+note over user,userServiceClient: Upon receiving AuthenticationResult from IUserService, <br/> do a page refresh in order to refresh the User's AuthenticationState<br/><br/> Example: NavigationManager.NavigateTo("/", true).
 ```
