--- a/docs/src/04.use-cases.md
+++ b/docs/src/04.use-cases.md
@@ -3,7 +3,7 @@
 Depending on your current render mode, Blazor.Auth will behave differently. In-depth use case diagrams are organized according to different Blazor interactivity types:
 
 - [Interactive WebAssembly](04.use-cases/01.interactive-webassembly.md)
-- ⚠️ [Interactive Server (Work in progress)](04.use-cases/02.interactive-server.md) ⚠️ 
+- [⚠️ Interactive Server (Work in progress) ⚠️](04.use-cases/02.interactive-server.md) 
 
 ### Refresh Token
 
