Update Use Cases

--- a/docs/src/04.use-cases.md
+++ b/docs/src/04.use-cases.md
@@ -1,6 +1,10 @@
 ## Use Cases
 
-Depending on your current render mode, Blazor.Auth will behave differently. In-depth use case diagrams are organized according to different Blazor interactivity types:
+While your end soultion code regarding authentication remains the same, the way Blazor.Auth behaves under the hood may vary depending on your current render mode. 
+
+The following segments will guide you through the most common use-cases such as Sign-In, Sign-Up and Sign-Out and show you how to implement them in your Blazor application. 
+
+More detailed diagrams are organized according to different Blazor interactivity types:
 
 - [Interactive WebAssembly](04.use-cases/01.interactive-webassembly.md)
 - [⚠️ Interactive Server (Work in progress) ⚠️](04.use-cases/02.interactive-server.md) 
