Add use cases for Static SSR

--- a/docs/src/04.use-cases/02.interactive-webassembly.md
+++ b/docs/src/04.use-cases/02.interactive-webassembly.md
@@ -2,7 +2,7 @@ Back to [Use Cases](../04.use-cases.md)
 
 ## Interactive WebAssembly
 
-The following sequence diagrams illustrate the use cases for Blazor.Auth in a Blazor application that is currently using interactive WebAssembly render mode:
+The following sequence diagrams illustrate the use cases for Blazor.Auth in a Blazor application that is currently using `Interactive WebAssembly` render mode:
 
 ### Sign-In
 
