--- a/docs/src/04.use-cases.md
+++ b/docs/src/04.use-cases.md
@@ -6,8 +6,9 @@ The following segments will guide you through the most common use-cases such as 
 
 More detailed diagrams are organized according to different Blazor interactivity types:
 
-- [Interactive WebAssembly](04.use-cases/01.interactive-webassembly.md)
-- [⚠️ Interactive Server (Work in progress) ⚠️](04.use-cases/02.interactive-server.md) 
+- [Static SSR](04.use-cases/01.static-ssr.md)
+- [Interactive WebAssembly](04.use-cases/02.interactive-webassembly.md)
+- [Interactive Server](04.use-cases/03.interactive-server.md) 
 
 ### Refresh Token
 
