Update color theme

--- a/docs/src/04.use-cases/01.static-ssr.md
+++ b/docs/src/04.use-cases/01.static-ssr.md
@@ -14,7 +14,7 @@ sequenceDiagram
 actor user as User
 participant page as SignIn Page
 
-box Purple Blazor.Auth
+box rgba(101, 63, 232, 0.5) Blazor.Auth
 participant userService as IUserService (Server)
 participant authService as IAuthenticationService (Server)
 end
@@ -47,7 +47,7 @@ sequenceDiagram
 actor user as User
 participant page as SignUp Page
 
-box Purple Blazor.Auth
+box rgba(101, 63, 232, 0.5) Blazor.Auth
 participant userService as IUserService (Server)
 participant authService as IAuthenticationService (Server)
 end
@@ -75,12 +75,13 @@ note over user,userService: Updated cookies will be attached to the HTTP respons
 ### Sign-Out
 
 ```mermaid
+
 sequenceDiagram
 
 actor user as User
 participant page as Page
 
-box Purple Blazor.Auth
+box rgba(101, 63, 232, 0.5) Blazor.Auth
 participant userService as IUserService (Server)
 end
 
