Fix use-cases diagrams layout

--- a/docs/src/04.use-cases/02.interactive-webassembly.md
+++ b/docs/src/04.use-cases/02.interactive-webassembly.md
@@ -11,8 +11,12 @@ sequenceDiagram
 
 actor user as User
 participant page as SignIn Page
+
+box rgba(101, 63, 232, 0.5) Blazor.Auth
 participant userServiceClient as IUserService (Client)
 participant userServiceServer as IUserService (Server)
+end
+
 participant authService as IAuthenticationService (Server)
 
 user ->>+ page: Submit Sign-In Form
@@ -41,8 +45,12 @@ sequenceDiagram
 
 actor user as User
 participant page as SignUp Page
+
+box rgba(101, 63, 232, 0.5) Blazor.Auth
 participant userServiceClient as IUserService (Client)
 participant userServiceServer as IUserService (Server)
+end
+
 participant authService as IAuthenticationService (Server)
 
 user ->>+ page: Submit Sign-Up Form
@@ -71,8 +79,11 @@ sequenceDiagram
 
 actor user as User
 participant page as Page
+
+box rgba(101, 63, 232, 0.5) Blazor.Auth
 participant userServiceClient as IUserService (Client)
 participant userServiceServer as IUserService (Server)
+end
 
 user ->>+ page: Initiate Sign-Out
 page ->>+ userServiceClient: SignOutAsync()
