--- a/docs/src/03.authentication.md
+++ b/docs/src/03.authentication.md
@@ -51,7 +51,7 @@ You can inherit from the base `ServerSideAuthenticationService` class in order t
 ```csharp
 // Example Authentication Service
 public class SampleServerSideAuthenticationService
-    : ServerSideAuthenticationService<SignInPayload, SignUpPayload>()
+    : ServerSideAuthenticationService<SignInPayload, SignUpPayload>
 {
     protected override Task<AuthenticationResult> GetSignInResultAsync(SignInPayload signInPayload)
     {
@@ -84,9 +84,9 @@ public class SampleServerSideAuthenticationService
     {
         return new JwtPair
         {
-            AccessToken = "my-access-token"
+            AccessToken = "my-access-token",
             RefreshToken = "my-refresh-token"
-        }
+        };
     }
 }
 ```
