Better wording in 03.authentication.md

--- a/docs/src/03.authentication.md
+++ b/docs/src/03.authentication.md
@@ -93,7 +93,7 @@ public class SampleServerSideAuthenticationService
 
 #### Register the Authentication Service
 
-Call the `AddBlazorAuth` method in your Blazor Server `Program.cs` file and specify your `IAuthenticationService` implementation.
+Specify your `IAuthenticationService` implementation when calling the `AddBlazorAuth` method in your Blazor Server `Program.cs` file.
 
 ```csharp
 // Program.cs
