--- a/docs/src/04.use-cases/03.interactive-server.md
+++ b/docs/src/04.use-cases/03.interactive-server.md
@@ -6,12 +6,83 @@ The following sequence diagrams illustrate the use cases for Blazor.Auth in a Bl
 
 ### Sign-In
 
-> 🚧 This use-case is currently not supported for this render mode. Check back later.
+```mermaid
+sequenceDiagram
+
+actor user as User
+participant page as SignIn Page
+
+box rgba(101, 63, 232, 0.5) Blazor.Auth
+participant userServiceServer as IUserService (Server)
+end
+
+participant authService as IAuthenticationService (Server)
+
+user ->>+ page: Submit Sign-In Form
+page ->>+ userServiceServer: SignInAsync(signInPayload)
+note over page,userServiceServer: Resolve IUserService from DI<br/> and call it's `SignInAsync` method.
+
+userServiceServer ->>+ authService: SignInAsync(signInPayload)
+authService ->> authService: Your server-side sign-in logic
+
+authService -->>- userServiceServer: AuthenticationResult
+userServiceServer -->> userServiceServer: Update authentication cookies
+
+userServiceServer -->>- page: AuthenticationResult
+page -->>- user: Continue, <br/> e.g. redirect to home page, <br/> or other custom logic
+
+note over user,userServiceServer: Upon receiving AuthenticationResult from IUserService, <br/> do a page refresh in order to refresh the User's AuthenticationState<br/><br/> Example: NavigationManager.NavigateTo("/", true).
+```
 
 ### Sign-Up
 
-> 🚧 This use-case is currently not supported for this render mode. Check back later.
+```mermaid
+sequenceDiagram
+
+actor user as User
+participant page as SignUp Page
+
+box rgba(101, 63, 232, 0.5) Blazor.Auth
+participant userServiceServer as IUserService (Server)
+end
+
+participant authService as IAuthenticationService (Server)
+
+user ->>+ page: Submit Sign-Up Form
+page ->>+ userServiceServer: SignUpAsync(signUpPayload)
+note over page,userServiceServer: Resolve IUserService from DI<br/> and call it's `SignUpAsync` method.
+
+userServiceServer ->>+ authService: SignUpAsync(signUpPayload)
+authService ->> authService: Your server-side sign-up logic
+
+authService -->>- userServiceServer: AuthenticationResult
+userServiceServer -->> userServiceServer: Update authentication cookies
+
+userServiceServer -->>- page: AuthenticationResult
+page -->>- user: Continue, <br/> e.g. redirect to home page, <br/> or other custom logic
+
+note over user,userServiceServer: Upon receiving AuthenticationResult from IUserService, <br/> do a page refresh in order to refresh the User's AuthenticationState<br/><br/> Example: NavigationManager.NavigateTo("/", true).
+```
 
 ### Sign-Out
 
-> 🚧 This use-case is currently not supported for this render mode. Check back later.
+```mermaid
+sequenceDiagram
+
+actor user as User
+participant page as Page
+
+box rgba(101, 63, 232, 0.5) Blazor.Auth
+participant userServiceServer as IUserService (Server)
+end
+
+user ->>+ page: Initiate Sign-Out
+page ->>+ userServiceServer: SignOutAsync()
+note over page,userServiceServer: Resolve IUserService from DI<br/> and call it's `SignOutAsync` method.
+userServiceServer -->> userServiceServer: Remove authentication cookies
+
+userServiceServer -->>- page: #32;
+page -->>- user: Continue, <br/> e.g. redirect to home page, <br/> or other custom logic
+
+note over user,userServiceServer: Upon sign-out process completion, <br/> do a page refresh in order to refresh the User's AuthenticationState<br/><br/> Example: NavigationManager.NavigateTo("/", true).
+```
