--- a/docs/src/01.introduction.md
+++ b/docs/src/01.introduction.md
@@ -1,13 +1,13 @@
 ## Introduction
 
-BitzArt.Blazor.Auth is a Blazor library that provides tearless **authentication** and **authorization** capabilities for your Blazor applications. Thanks to [Blazor.Cookies](https://github.com/BitzArt/Blazor.Cookies), it works with all Blazor United  **render modes**:
+BitzArt.Blazor.Auth is a Blazor library that provides tearless **authentication** and **authorization** capabilities for your Blazor applications. Thanks to [Blazor.Cookies](https://github.com/BitzArt/Blazor.Cookies), it works with all Blazor United  **render modes**.
 
-| Blazor Rendermode       | Support |
-|-------------------------|:-------:|
-| Static SSR              | ✔️     |
-| Interactive Server      | ✔️     |
-| Interactive WebAssembly | ✔️     |
-| Interactive Auto        | ✔️     |
+| Blazor Rendermode       | Support | Sign-In | Sign-Up | Sign-Out |
+|-------------------------|:-------:|:-------:|:-------:|:--------:|
+| Static SSR              | ✔️      | ✔️     | ✔️      | ✔️      |
+| Interactive Server      | ✔️      | ✔️     | ✔️      | ✔️      |
+| Interactive WebAssembly | ✔️      | ✔️     | ✔️      | ✔️      |
+| Interactive Auto        | ✔️      | ✔️     | ✔️      | ✔️      |
 
 ### Getting Started
 
