--- a/docs/src/01.introduction.md
+++ b/docs/src/01.introduction.md
@@ -2,12 +2,12 @@
 
 BitzArt.Blazor.Auth is a Blazor library that provides tearless **authentication** and **authorization** capabilities for your Blazor applications. Thanks to [Blazor.Cookies](https://github.com/BitzArt/Blazor.Cookies), it works with all Blazor United  **render modes**.
 
-| Blazor Rendermode       | Support | Sign-In | Sign-Up | Sign-Out |
-|-------------------------|:-------:|:-------:|:-------:|:--------:|
-| Static SSR              | ✔️      | ✔️     | ✔️      | ✔️      |
-| Interactive Server      | ✔️      | ✔️     | ✔️      | ✔️      |
-| Interactive WebAssembly | ✔️      | ✔️     | ✔️      | ✔️      |
-| Interactive Auto        | ✔️      | ✔️     | ✔️      | ✔️      |
+| Blazor Rendermode                                                     | Support | Sign-In | Sign-Up | Sign-Out |
+|-----------------------------------------------------------------------|:-------:|:-------:|:-------:|:--------:|
+| [Static SSR](04.use-cases/01.static-ssr.md)                           | ✔️      | ✔️     | ✔️      | ✔️      |
+| [Interactive Server](04.use-cases/03.interactive-server.md)           | ✔️      | ✔️     | ✔️      | ✔️      |
+| [Interactive WebAssembly](04.use-cases/02.interactive-webassembly.md) | ✔️      | ✔️     | ✔️      | ✔️      |
+| Interactive Auto                                                      | ✔️      | ✔️     | ✔️      | ✔️      |
 
 ### Getting Started
 
