--- a/docs/src/04.use-cases/01.static-ssr.md
+++ b/docs/src/04.use-cases/01.static-ssr.md
@@ -33,7 +33,7 @@ userService -->> userService: Update authentication cookies
 userService -->>- page: AuthenticationResult
 
 page -->>- user:  Form submission HTTP Response
-note over user,userService: Updated cookies will be attached to the HTTP response <br/> which will result in them being automalically stored in the user's browser.
+note over user,userService: Updated cookies will be attached to the HTTP response.
 ```
 
 ### Sign-Up
@@ -63,7 +63,7 @@ userService -->> userService: Update authentication cookies
 userService -->>- page: AuthenticationResult
 
 page -->>- user:  Form submission HTTP Response
-note over user,userService: Updated cookies will be attached to the HTTP response <br/> which will result in them being automalically stored in the user's browser.
+note over user,userService: Updated cookies will be attached to the HTTP response.
 ```
 
 ### Sign-Out
