Better wording in Static SSR diagrams

--- a/docs/src/04.use-cases/01.static-ssr.md
+++ b/docs/src/04.use-cases/01.static-ssr.md
@@ -4,7 +4,7 @@ Back to [Use Cases](../04.use-cases.md)
 
 The following sequence diagrams illustrate the use cases for Blazor.Auth in a Blazor application that is currently using `Static SSR` render mode. 
 
-For implementing these use-cases, an approach utilizing form submission is used. For more information on how Blazor handles form submission in Static SSR, refer to [Blazor Documentation](https://learn.microsoft.com/en-us/aspnet/core/blazor/forms/#handle-form-submission). 
+For the purposes of these sample flows, an approach utilizing form submission is used. For more information on how Blazor handles form submission in Static SSR, refer to [Blazor Documentation](https://learn.microsoft.com/en-us/aspnet/core/blazor/forms/#handle-form-submission). You can use any other approach, as long as it is compatible with Static SSR. Just resolve the `IUserService` from the DI container and call it's appropriate method - Blazor.Auth will take care of the rest.
 
 ### Sign-In
 
